FIND_LIBRARY(COCOA_LIBRARY Cocoa)
FIND_LIBRARY(OPENGL_LIBRARY OpenGL)
FIND_LIBRARY(IOKIT_LIBRARY IOKit)
FIND_LIBRARY(COREVIDEO_LIBRARY CoreVidoe)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_SEARCH_MODULE(GLFW REQUIRED glfw3)


SET(macosx_SOURCES
    main.mm
)

SET(macosx_HEADERS
)

INCLUDE_DIRECTORIES(
    ../include
    ${GLFW_INCLUDE_DIRS}
)

LINK_DIRECTORIES(
    ${GLFW_LIBRARY_DIRS}
)

ADD_EXECUTABLE(macosx
    ${macosx_SOURCES}
)

TARGET_LINK_LIBRARIES(macosx
    llmr
    ${COCOA_LIBRARY}
    ${OPENGL_LIBRARY}
    ${IOKIT_LIBRARY}
    ${COREVIDOE_LIBRARY}
    ${GLFW_LIBRARIES}
)
